修改主页样式，适配移动端。

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -119,3 +119,17 @@ $theme-color-blue: #247fbb;
   font-weight: 400;
   color: #333;
 }
+
+
+/*@media screen and (min-width: 1080px){
+
+}
+
+@media screen and (min-width: 750px){
+
+}
+
+@media screen and (min-width: 450px){
+
+}
+*/
