--- a/src/assets/css/bootstrap/css/bootstrap.css
+++ b/src/assets/css/bootstrap/css/bootstrap.css
@@ -3994,7 +3994,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #;
+  background-color: #1a6fa6;
 }
 .nav > li.disabled > a {
   color: #777777;
