修改主页样式，适配移动端。

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -7,7 +7,7 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
   border: none;
   color: #333;
   font-weight: normal;
-  font-family: 方正兰亭黑简体;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   box-sizing: border-box;
   -webkit-tap-highlight-color:transparent;
   -webkit-font-smoothing: antialiased;
