--- a/src/assets/css/bootstrap/css/bootstrap.css
+++ b/src/assets/css/bootstrap/css/bootstrap.css
@@ -3994,7 +3994,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #1a6fa6;
+  background-color: transparent;
 }
 .nav > li.disabled > a {
   color: #777777;
@@ -4009,7 +4009,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #dddddd;
+  background-color: #337ab7;
   border-color: #337ab7;
 }
 .nav .nav-divider {
