--- a/src/assets/css/page.scss
+++ b/src/assets/css/page.scss
@@ -12,7 +12,7 @@
   margin: 0 auto;
 }
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   .content{
     width: 100%;
   }
@@ -26,5 +26,32 @@
   .content {
     width: 992px;
   }
-}
+ } */
+
+
+  @media (min-width: 640px) {
+    .content{
+      width:640px;
+    }
+  }
+
+  @media (min-width: 750px) {
+    .content{
+      width:750px;
+    }
+  }
+  @media (min-width: 1000px) {
+    .content{
+      width:992px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .content{
+      width:1180px;
+    }
+  }
+
+
+
+
 
