--- a/src/assets/css/page.scss
+++ b/src/assets/css/page.scss
@@ -6,7 +6,7 @@
 }
 
 .content {
-  width: 1180px;
+  width: 100%;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
@@ -16,7 +16,6 @@
   .content {
     width: 640px;
   }
-
 }
 @media (min-width: 750px) {
   .content{
